add bootstrap carousel example files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCUMENT HTML>
+<!DOCTYPE HTML>
 <html>
 
 	<head>
@@ -8,10 +8,10 @@
 	    <meta name="description" content="">
 	    <meta name="author" content=""> -->
 
-	    <link rel="stylesheet" type="text/css" href="{{static_url("bootstrp/css/bootstrap-responsive.css")}}">
-	    <link rel="stylesheet" type="text/css" href="{{static_url("bootstrp/css/bootstrap.css") }}">
+	    <link rel="stylesheet" type="text/css" href="{{ static_url("bootstrap/css/bootstrap-responsive.css") }}">
+	    <link rel="stylesheet" type="text/css" href="{{ static_url("bootstrap/css/bootstrap.css") }}">
 
-	    <script type="text/javascript" src="{{static_url("bootstrp/js/bootstrp.js")}}"></script>
+	    <script type="text/javascript" src="{{ static_url("bootstrap/js/bootstrp.js") }}"></script>
 
 	</head>
 
