--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -329,7 +329,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="  {{ static_url("bootstrap/img/examples/slide-02.jpg") }}"  alt="">
+          <img src=" {{ static_url("bootstrap/img/examples/slide-02.jpg") }} "  alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -339,7 +339,7 @@
           </div>
         </div>
         <div class="item">
-          <img src="  {{ static_url("bootstrap/img/examples/slide-03.jpg") }}"  alt="">
+          <img src=" {{ static_url("bootstrap/img/examples/slide-03.jpg") }} "  alt="">
           <div class="container">
             <div class="carousel-caption">
               <h1>One more for good measure.</h1>
@@ -444,12 +444,16 @@
 
     /*<script src=" {{ static_url("bootstrap/js/bootstrap.js") }} "></script>*/
     <script>
-      !function ($) {
+      /*!function ($) {
         $(function(){
           // carousel demo
           $('#myCarousel').carousel()
         })
-      }(window.jQuery)
+      }(window.jQuery)*/
+      $(function(){
+          // carousel demo
+          $('#myCarousel').carousel()
+        })
     </script>
     <script src=" {{ static_url("bootstrap/js/holder/holder.js") }}"></script>
   </body>
