--- a/templates/carousel.html
+++ b/templates/carousel.html
@@ -429,6 +429,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src=" {{ static_url("bootstrap/js/jquery.js") }} "></script>
+    <!-- 
     <script src=" {{ static_url("bootstrap/js/bootstrap-transition.js") }} "></script>
     <script src=" {{ static_url("bootstrap/js/bootstrap-alert.js") }} "></script>
     <script src=" {{ static_url("bootstrap/js/bootstrap-modal.js") }} "></script>
@@ -441,8 +442,9 @@
     <script src=" {{ static_url("bootstrap/js/bootstrap-collapse.js") }} "></script>
     <script src=" {{ static_url("bootstrap/js/bootstrap-carousel.js") }} "></script>
     <script src=" {{ static_url("bootstrap/js/bootstrap-typeahead.js") }} "></script>
+    -->
 
-    /*<script src=" {{ static_url("bootstrap/js/bootstrap.js") }} "></script>*/
+    <script src=" {{ static_url("bootstrap/js/bootstrap.js") }} "></script>
     <script>
       /*!function ($) {
         $(function(){
